--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@octokit/rest": "^21.0.2",
     "telegraf": "^4.16.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "mammoth": "^1.6.0"
   }
 }
